--- a/index.html
+++ b/index.html
@@ -1,74 +1,88 @@
 <!DOCTYPE html>
 <!-- ICS2O-Unit3-01-HTML-MDL -->
 <html lang="en-ca">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Fahrenheit to Celcius" />
+    <meta name="keywords" content="mths, icd2o" />
+    <meta name="author" content="Joyce Nkengbeza" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.deep_purple-purple.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-iconnew.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32new.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16new.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
+    <title>Fahrenheit to Celcius, JS</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="description" content="Area Of Trapezoid With JS" />
-  <meta name="keywords" content="mths, icd2o" />
-  <meta name="author" content="Joyce Nkengbeza" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-purple.min.css" />
-  <link rel="stylesheet" href="./css/style.css" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-iconnew.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32new.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16new.png" />
-  <link rel="manifest" href="./site.webmanifest" />
-  <title>Area of Trapezoid in JS</title>
-</head>
-
-<body>
-  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-  <script src="./js/script.js"></script>
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-      <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Area of Trapezoid in JS</span>
-      </div>
-    </header>
-    <main class="mdl-layout__content">
-      <div class="page-content">Area of Trapezoid in JS</div>
-      <img src="./images/trapezoid.svg" />
-      <h3>Formula</h3>
-      <div class="page-content"><h2>A = [(a + b) / 2] x h</h2></div>
-      <div class="page-content">Please enter integers for dimensions</div>
-      <br />
-      <form>
-        <!-- Numeric Textfield -->
-        <p>A Base:</p>
-        <div class="mdl-textfield mdl-js-textfield">
-          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="a-base" /> <span>mm</span>
-          <!-- class "mdl-textfield__error" -->
-          <span class="mdl-textfield__error">Input is not a number!</span>
+  <body>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">Fahrenheit to Celcius in JS</span>
         </div>
-        <!-- Numeric Textfield -->
-        <p>B Base:</p>
-        <div class="mdl-textfield mdl-js-textfield">
-          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="b-base" /> <span>mm</span>
-          <!-- class "mdl-textfield__error" -->
-          <span class="mdl-textfield__error">Input is not a number!</span>
-        </div>
-        <!-- Numeric Textfield -->
-        <p>Height:</p>
-        <div class="mdl-textfield mdl-js-textfield">
-          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="height-length" /> <span>mm</span>
-          <!-- class "mdl-textfield__error" -->
-          <span class="mdl-textfield__error">Input is not a number!</span>
-        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <div class="page-content">Fahrenheit to Celcius in JS</div>
+        <img src="./images/trapezoid.svg" />
+        <h3>Formula</h3>
+        <div class="page-content">(32°F - 32) x 5/9 = 0°C</div>
+        <form>
+          <br />
+          <!-- Numeric Textfield -->
+          <p>Fahrenheit</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="fahrenheit"
+            />
+            <label class="mdl-textfield__label" for="fahrenheit"
+              >enter value</label
+            >
+            <!-- class "mdl-textfield__error" -->
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          <br />
+          <!-- Accent-colored raised button with ripple -->
+          <button
+            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+            onclick="calculateCelcius()"
+            type="button"
+          >
+            Calculate
+          </button>
+        </form>
         <br />
-        <!-- Raised button with ripple -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="calculatearea()" type="button">
-          Calculate
-        </button>
-      </form>
-      <br />
-      <div class="page-content-answer">
-        <div id="area"></div>
-      </div>
-    </main>
-  </div>
-</body>
-
+        <div class="page-content-answer">
+          <div id="temperature"></div>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
