changed dates and names

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- ICS2O-Unit3-01-HTML-MDL -->
+<!-- ICS2O-Unit3-04-HTML-MDL -->
 <html lang="en-ca">
   <head>
     <meta charset="utf-8" />
@@ -48,7 +48,7 @@
       </header>
       <main class="mdl-layout__content">
         <div class="page-content">Fahrenheit to Celcius in JS</div>
-        <img src="./images/trapezoid.svg" />
+        <img src="./images/celsius-to-fahrenheit.png" />
         <h3>Formula</h3>
         <div class="page-content">(32°F - 32) x 5/9 = 0°C</div>
         <form>
